Plot changes + report

--- a/Lab1/report/task2/result.tex
+++ b/Lab1/report/task2/result.tex
@@ -23,7 +23,7 @@
 	\caption{Все точки минимумов функции Бута и их значения}
 \end{table}
 
-Рассмотрим работу алгоритма поиска глобального минимума на начальном брусе \textbf{A} = [(-10, 10), (-10, 10)], $\epsilon = 0.01$. Черная линия - путь работы алгоритма, красная точка - найденный алгоритмом глобальный минимум.
+Рассмотрим работу алгоритма поиска глобального минимума на начальном брусе \textbf{A} = [(-10, 10), (-10, 10)], $\epsilon = 0.01$. Зеленая линия - путь работы алгоритма.
 
 \begin{figure}[H]
 	\centering
@@ -71,7 +71,7 @@
 	\caption{Все точки минимумов функции Химмельблау и их значения}
 \end{table}
 
-Рассмотрим работу алгоритма поиска глобального минимума на начальном брусе \textbf{A} = [(-5, 5), (-5, 5)], $\epsilon = 0.01$. Черная линия - путь работы алгоритма, красная точка - найденный алгоритмом глобальный минимум.
+Рассмотрим работу алгоритма поиска глобального минимума на начальном брусе \textbf{A} = [(-5, 5), (-5, 5)], $\epsilon = 0.01$. Зеленая линия - путь работы алгоритма.
 
 \begin{figure}[H]
 	\centering
